<resources>
    <string name="app_name">Mysplash</string>
    <string name="auth_login">Login</string>
    <string name="auth_canceled">Authentication failed</string>
    <string name="corrupt_access_token">Corrupt access token</string>
    <string name="get_user_info">Get user info</string>
    <string name="get_user_error">Get user error</string>
    <string name="logout">logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="my_liked_photo">My liked photo</string>
    <string name="likes">Likes: </string>
    <string name="like_it">Like it</string>
    <string name="userid">User id</string>
    <string name="user_name">User Name</string>
    <string name="user_location">User location</string>
    <string name="user_total_likes">User total likes</string>
    <string name="user_email">User email</string>
    <string name="you_like_it">You like it!</string>
    <string name="you_un_like_it">You unlike it!</string>
    <string name="like_error">Like error</string>
    <string name="unlike_error">Unlike error</string>
    <string name="unlike_it">Unlike it</string>
    <string name="like_info_error">Like info error</string>
    <string name="like">Like</string>
    <string name="save">Save</string>
    <string name="get_photo_error">Get photo error</string>
    <string name="photo_by">Photo by</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_fore_this_query">No results found fore this query</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="collections">Collections</string>
    <string name="user">User</string>
    <string name="photos">Photos</string>
    <string name="gallery">Gallery</string>
    <string name="search_best_photos">Search best photos</string>
    <string name="choose_best_collections">Choose best collections</string>
    <string name="save_best_to_gallery">Save the best photos to favorites or download them to your gallery</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="share_it">Share</string>
    <string name="this_photo_does_not_have_location_info">This photo does not have location info</string>
    <string name="are_you_sure_you_want_to_get_out_all_local_data_will_be_deleted.">Are you sure you want to get out? All local data will be deleted.</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>